observability-ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt-prod
spec:
  ingressClassName: public
  rules:
  - host: grafana.learnwithnk.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-grafana
            port:
              number: 80
  tls:
  - hosts:
    - grafana.learnwithnk.in
    secretName: grafana-tls
